[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "SeismicMesh"
version = "3.6.2"
description = "2D/3D serial and parallel triangular mesh generation for seismology"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Keith Roberts" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib",
    "mpi4py",
    "numpy",
    "pyamg",
    "pytest_codeblocks",
    "scipy",
]

[project.optional-dependencies]
all = [
    "segyio", "meshplex", "pygalmesh", "pygmsh", "meshio", "termplotlib",
]
benchmarking = [
    "meshplex", "pygalmesh", "pygmsh", "meshio", "termplotlib",
]
io = [
    "segyio", "h5py", "meshio",
]

[project.urls]
Homepage = "https://github.com/krober10nd/SeismicMesh"


[tool.scikit-build]
wheel.exclude = ["*.cpp"]
